--- a/ImageSlider/index.html
+++ b/ImageSlider/index.html
@@ -59,5 +59,6 @@
         <button onclick="moveSlide(1)">Next</button>
       </div>
     </div>
+    <script src="image.js"></script>
   </body>
 </html>
